--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "wykopx",
   "version": "1.0.5",
   "private": true,
+  "homepage": "/",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.10.1",
     "@mui/x-date-pickers": "^5.0.0-beta.5",
-    "@tanstack/react-query": "^4.1.3",
+    "@tanstack/react-query": "^4.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
     "react": "^18.2.0",
@@ -58,7 +59,7 @@
     "eslint": "^8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.4.1",
+    "eslint-import-resolver-typescript": "^3.4.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
