--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "@tanstack/react-query": "^4.2.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.10.1",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "vite-plugin-svgr": "^2.2.1"
   },
   "devDependencies": {
     "@types/node": "^18.7.6",
