chore: remove backend

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,186 +4,9 @@
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer",
       "build": true
-    },
-    "getLink": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getEntries": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getEntry": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getHits": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getTag": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getProfileActions": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getProfile": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getLinks": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "getConnectUrl": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
-    },
-    "login": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "wykopxApiFunctionLayer",
-          "attributes": ["Arn"]
-        }
-      ]
     }
   },
-  "api": {
-    "wykopxApi": {
-      "service": "API Gateway",
-      "providerPlugin": "awscloudformation",
-      "dependsOn": [
-        {
-          "category": "function",
-          "resourceName": "getLink",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getEntry",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getEntries",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getTag",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getProfile",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getProfileActions",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getHits",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getLinks",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "getConnectUrl",
-          "attributes": ["Name", "Arn"]
-        },
-        {
-          "category": "function",
-          "resourceName": "login",
-          "attributes": ["Name", "Arn"]
-        }
-      ]
-    }
-  },
+  "api": {},
   "hosting": {
     "amplifyhosting": {
       "service": "amplifyhosting",
