--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,9 +4,50 @@
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer",
       "build": true
+    },
+    "getLink": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "wykopxApiFunctionLayer",
+          "attributes": ["Arn"]
+        }
+      ]
+    },
+    "getEntry": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "wykopxApiFunctionLayer",
+          "attributes": ["Arn"]
+        }
+      ]
     }
   },
-  "api": {},
+  "api": {
+    "wykopxApi": {
+      "service": "API Gateway",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [
+        {
+          "category": "function",
+          "resourceName": "getLink",
+          "attributes": ["Name", "Arn"]
+        },
+        {
+          "category": "function",
+          "resourceName": "getEntry",
+          "attributes": ["Name", "Arn"]
+        }
+      ]
+    }
+  },
   "hosting": {
     "amplifyhosting": {
       "service": "amplifyhosting",
