--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -222,6 +222,14 @@
             "Name",
             "Arn"
           ]
+        },
+        {
+          "category": "function",
+          "resourceName": "getHits",
+          "attributes": [
+            "Name",
+            "Arn"
+          ]
         }
       ]
     }
