--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "amplify:getEntries": "npm run compile-ts",
     "amplify:getHits": "npm run compile-ts",
     "amplify:getTag": "npm run compile-ts",
-    "amplify:getProfile": "npm run compile-ts",
-    "amplify:getProfileActions": "npm run compile-ts",
+    "amplify:getUser": "npm run compile-ts",
+    "amplify:getUserActions": "npm run compile-ts",
     "amplify:getConnectUrl": "npm run compile-ts",
     "amplify:login": "npm run compile-ts"
   },
@@ -29,7 +29,7 @@
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.6",
-    "@tanstack/react-query": "^4.13.0",
+    "@tanstack/react-query": "^4.13.4",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "path": "^0.12.7",
