--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
-    "@mui/material": "^5.10.11",
-    "@mui/x-date-pickers": "^5.0.6",
-    "@tanstack/react-query": "^4.13.4",
+    "@mui/material": "^5.10.13",
+    "@mui/x-date-pickers": "^6.0.0-alpha.6",
+    "@tanstack/react-query": "^4.13.5",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.4.3",
     "vite-plugin-svgr": "^2.2.2"
   },
   "devDependencies": {
-    "@types/node": "^16.18.2",
-    "@types/react": "^18.0.24",
+    "@types/node": "^16.18.3",
+    "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
-    "@typescript-eslint/eslint-plugin": "^5.41.0",
-    "@typescript-eslint/parser": "^5.41.0",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
     "@vitejs/plugin-react": "^2.2.0",
-    "eslint": "^8.26.0",
+    "eslint": "^8.27.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -56,6 +56,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4",
-    "vite": "^3.2.1"
+    "vite": "^3.2.3"
   }
 }
