--- a/amplify/backend/package.json
+++ b/amplify/backend/package.json
@@ -7,15 +7,15 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@aws-amplify/cli-extensibility-helper": "2.4.2",
+    "@aws-amplify/cli-extensibility-helper": "^2.4.5",
     "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1232.0",
-    "axios": "^1.1.2",
+    "aws-sdk": "^2.1257.0",
+    "axios": "^1.1.3",
     "crypto-js": "^4.1.1"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.107",
+    "@types/aws-lambda": "^8.10.108",
     "@types/crypto-js": "^4.1.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   }
 }
