--- a/package.json
+++ b/package.json
@@ -33,12 +33,10 @@
     "@tanstack/react-query": "^4.16.1",
     "axios": "^1.1.3",
     "date-fns": "^2.29.3",
-    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
-    "react-router-dom": "^6.4.3",
-    "vite-plugin-svgr": "^2.2.2"
+    "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
     "@types/node": "^16.18.3",
@@ -55,8 +53,10 @@
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "path": "^0.12.7",
     "prettier": "^2.7.1",
     "typescript": "^4.9.3",
-    "vite": "^3.2.4"
+    "vite": "^3.2.4",
+    "vite-plugin-svgr": "^2.2.2"
   }
 }
