--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@mui/x-date-pickers": "^6.0.0-alpha.9",
-    "@tanstack/react-query": "^4.17.1",
+    "@tanstack/react-query": "^4.18.0",
     "axios": "^1.2.0",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
@@ -39,6 +39,7 @@
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@tanstack/react-query-devtools": "^4.18.0",
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
