--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
-    "@mui/icons-material": "^5.10.16",
-    "@mui/material": "^5.10.16",
-    "@mui/x-date-pickers": "^6.0.0-alpha.10",
-    "@tanstack/react-query": "^4.19.0",
-    "axios": "^1.2.0",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.0",
+    "@mui/x-date-pickers": "^6.0.0-alpha.12",
+    "@tanstack/react-query": "^4.20.4",
+    "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
-    "react-router-dom": "^6.4.4"
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.19.0",
-    "@types/node": "^18.11.10",
+    "@tanstack/react-query-devtools": "^4.20.4",
+    "@types/node": "^18.11.16",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.45.0",
-    "@typescript-eslint/parser": "^5.45.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "@vitejs/plugin-react": "^2.2.0",
-    "eslint": "^8.29.0",
+    "eslint": "^8.30.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -55,9 +55,9 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "path": "^0.12.7",
-    "prettier": "^2.8.0",
-    "typescript": "^4.9.3",
-    "vite": "^3.2.4",
-    "vite-plugin-svgr": "^2.2.2"
+    "prettier": "^2.8.1",
+    "typescript": "^4.9.4",
+    "vite": "^4.0.1",
+    "vite-plugin-svgr": "2.4.0"
   }
 }
