--- a/package.json
+++ b/package.json
@@ -9,55 +9,41 @@
     "start-expose": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint src",
-    "compile-ts": "cd amplify/backend && yarn install && tsc -p ./tsconfig.json && find function/ -name '*.ts' -exec rm {} \\; && cd -",
-    "amplify:wykopxApi": "npm run compile-ts",
-    "amplify:wykopxApiFunctionLayer": "npm run compile-ts",
-    "amplify:getLink": "npm run compile-ts",
-    "amplify:getLinks": "npm run compile-ts",
-    "amplify:getEntry": "npm run compile-ts",
-    "amplify:getEntries": "npm run compile-ts",
-    "amplify:getHits": "npm run compile-ts",
-    "amplify:getTag": "npm run compile-ts",
-    "amplify:getUser": "npm run compile-ts",
-    "amplify:getUserActions": "npm run compile-ts",
-    "amplify:getConnectUrl": "npm run compile-ts",
-    "amplify:login": "npm run compile-ts"
+    "lint": "eslint src"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.2",
-    "@mui/x-date-pickers": "^6.0.0-alpha.13",
-    "@tanstack/react-query": "^4.20.4",
-    "axios": "^1.2.2",
+    "@mui/material": "^5.11.4",
+    "@mui/x-date-pickers": "^5.0.14",
+    "@tanstack/react-query": "^4.22.0",
+    "axios": "^1.2.3",
     "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.11.0",
-    "react-router-dom": "^6.6.1"
+    "react-router-dom": "^6.6.2"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.20.4",
-    "@types/node": "^18.11.18",
+    "@tanstack/react-query-devtools": "^4.22.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
-    "@typescript-eslint/eslint-plugin": "^5.47.1",
-    "@typescript-eslint/parser": "^5.47.1",
-    "@vitejs/plugin-react": "^2.2.0",
-    "eslint": "^8.30.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "@vitejs/plugin-react": "^3.0.1",
+    "eslint": "^8.32.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.1",
-    "eslint-plugin-react": "^7.31.11",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "path": "^0.12.7",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.4",
-    "vite": "^4.0.3",
+    "vite": "^4.0.4",
     "vite-plugin-svgr": "2.4.0"
   }
 }
