--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "WykopX",
-  "name": "WykopX",
+  "short_name": "WykopXD",
+  "name": "WykopXD",
   "author": "Karol Perec",
   "icons": [
     {
