--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,24 +2,25 @@
   "short_name": "WykopXD",
   "name": "WykopXD",
   "author": "Karol Perec",
+  "categories": ["entertainment", "news", "social"],
   "icons": [
     {
       "src": "/images/icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
       "src": "/images/icon-384.png",
       "sizes": "384x384",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
       "src": "/images/icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     }
   ],
   "scope": "./",
