--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "transliteration": "^2.3.5"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1",
